[package]
name = "diosic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
actix-web = "4"
actix-files = "0.6"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
futures-util = "0.3"
actix-cors = "0.6.3"
tracing-actix-web = "0.6"
lofty = "0.11"
clap = { version = "4.0.29", features = ["derive"] }
wasmtime = { version = "7"}
wasmtime-wasi = { version = "7" }
