[package]
name = "diosic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
actix-web = "4"
actix-files = "0.6"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
] }
futures-util = "0.3"
actix-cors = "0.6.3"
tracing-actix-web = "0.6"
lofty = "0.19"
clap = { version = "4.0.29", features = ["derive"] }
wasmtime = { version = "20.0.2"}
wasmtime-wasi = "20.0.2"
anyhow = "*"
chrono = "0.4"
toml = "*"
